--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<title>Exercise 7</title>
-	</head>
-	<body>
-		
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Exercise 7</title>
+    <style>
+      body {
+        background-color: #7C72A0;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="giphy.gif" alt="Yui Hirasawa from the anime K-on" style="width:600px;height:350px;">
+    <h1 style="color: #FFFFFF">Victoria Wang</h1>
+    <h2 style="color: #42033D">Github Setup Complete!</h2>
+  </body>
 </html>
-
-
-<h1>Revolutionary Net Art</h1>
-<h2>by Victoria</h2>
